# documaris

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md  background.md  customers.md  index.md  pier71-evaluation-mapping.md  roadmap.md
field_maps/: fal_form_1_field_map.json
mock/: vessel_V001.json
schemas/: vessel_record.json
tests/: test_schema_contract.py
