[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "documaris"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "jsonschema>=4.23",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
